# personal-constitution-web

./: AGENTS.md  package.json  pnpm-lock.yaml  test-api.sh  test-category-tree.sh  test-sort-api.sh  功能树.md
.github/workflows/: release.yml
api/: .env.example  Cargo.toml  build.rs
api/data/: categories.json  count-records.json  rules.json
api/src/: lib.rs  main.rs
api/src/handlers/: category.rs  mod.rs  rule.rs
api/src/models/: mod.rs
api/src/routes/: mod.rs
api/src/storage/: mod.rs
app/: globals.css  layout.tsx  page.tsx
app/components/category/: CategoryItem.tsx  CategoryList.tsx  CategoryModal.tsx
app/components/common/: Modal.tsx  SortSelector.tsx
app/components/rule/: CountButtons.tsx  RuleCard.tsx  RuleList.tsx  RuleModal.tsx
app/lib/: api-client.ts  category-utils.ts
app/types/: index.ts
docs/: development.md
plans/: nested-category-design.md
proto/: category.proto  count_record.proto  rule.proto
