[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.42"
prost = "0.14.1"
prost-build = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
uuid = { version = "1.19.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.14.1"
